# uri

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: _main.rs  addr.rs  authority.rs  error.rs  into_uri.rs  lib.rs  main.rs  parser.rs  path.rs  range.rs  uri.rs  utils.rs
tests/: authority_test.rs  from_json.rs  grom_go_test.rs  other.rs  range_test.rs  uri_anchor_test.rs  uri_data-scheme_test.rs  uri_host_test.rs  uri_idna2003_test.rs  uri_idna2008_test.rs  uri_ipv4_test.rs  uri_ipv6_test.rs  uri_mailto_test.rs  uri_miscellaneous_test.rs  uri_path_test.rs  uri_port_test.rs  uri_query_test.rs  uri_scheme_test.rs  uri_standard-url_test.rs  uri_test.rs  uri_whitespace_test.rs
