[package]
authors = ["serbe <serbenv@gmail.com>"]
description = "Rust implementation of the Uniform Resource Identifier (URI)"
edition = "2021"
name = "uri"
version = "0.4.13"
readme = "README.md"
repository = "https://github.com/serbe/uri/"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.13"
percent-encoding = "2.1"
thiserror = "1.0"
